--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="dashboard-container"></div>
+    <div class="header-container"></div>
+    <div class="main-content-container"></div>
 </body>
 </html>
