Complete dashboard layout

--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="dashboard-container"></div>
+    <div class="dashboard-container">
+        <div class="logo">Dashboard</div>
+        <div class="nav">
+            <ul class="nav1">
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities</li>
+            </ul>
+            <ul class="nav2">
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
+        </div>
+    </div>
     <div class="header-container"></div>
     <div class="main-content-container"></div>
 </body>
