Complete header skeleton

--- a/index.html
+++ b/index.html
@@ -26,7 +26,26 @@
             </ul>
         </div>
     </div>
-    <div class="header-container"></div>
+    <div class="header-container">
+        <div class="search-bar">
+            <span>Search</span>
+            <input type="search" id="search">
+        </div>
+        <div class="user-info">
+            <span>Icon</span>
+            <span>Icon</span>
+            <span id="username">Kurt Russell</span>
+        </div>
+        <div class="user-hello">
+            <div>Image</div>
+            <div><span>Hi there,</span><br><div id="user-tag">Kurt Russell (@kurt)</div></div>
+        </div>
+        <div class="user-buttons">
+            <button class="new">New</button>
+            <button class="upload">Upload</button>
+            <button class="share">Share</button>
+        </div>
+    </div>
     <div class="main-content-container"></div>
 </body>
 </html>
