Complete main body skeleton

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <button class="share">Share</button>
         </div>
     </div>
-    <div class="main-content-container"></div>
+    <div class="main-content-container">
+        
+    </div>
 </body>
 </html>
