Complete main body layout

--- a/index.html
+++ b/index.html
@@ -47,7 +47,25 @@
         </div>
     </div>
     <div class="main-content-container">
-        
+        <div class="projects-container">
+            <p>Your Projects</p>
+            <div class="cards-container">
+                <div class="card">Card1</div>
+                <div class="card">Card2</div>
+                <div class="card">Card3</div>
+                <div class="card">Card4</div>
+                <div class="card">Card5</div>
+                <div class="card">Card6</div>
+            </div>
+        </div>
+        <div class="announcements-container">
+            <p>Announcements</p>
+            <div class="announcents-div"></div>
+        </div>
+        <div class="trending-container">
+            <p>Trending</p>
+            <div class="trendings-div"></div>
+        </div>
     </div>
 </body>
 </html>
