Complete announcements/trending  layout

--- a/index.html
+++ b/index.html
@@ -60,11 +60,15 @@
         </div>
         <div class="announcements-container">
             <p>Announcements</p>
-            <div class="announcents-div"></div>
+            <div class="announcents-div">
+                <p>Annc1</p>
+                <hr>
+                <p>Ann2</p>
+            </div>
         </div>
         <div class="trending-container">
             <p>Trending</p>
-            <div class="trendings-div"></div>
+            <div class="trending-div"></div>
         </div>
     </div>
 </body>
