Tidy up  announcements/trending  padding/margin

--- a/index.html
+++ b/index.html
@@ -50,12 +50,31 @@
         <div class="projects-container">
             <p>Your Projects</p>
             <div class="cards-container">
-                <div class="card">Card1</div>
-                <div class="card">Card2</div>
-                <div class="card">Card3</div>
-                <div class="card">Card4</div>
-                <div class="card">Card5</div>
-                <div class="card">Card6</div>
+                <div class="card">
+                    <div class="card-header">Super Cool Project</div>
+                    <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dicta ab modi? Voluptatum nam, hic accusantium corporis corrupti in eveniet vitae officiis, voluptates recusandae autem!
+                    </div>
+                    <div class="card-footer">ICON ICON ICON</div>
+                </div>
+                <div class="card">
+                    <div class="card-header">Super Cool Project</div>
+                    <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dicta ab modi? Voluptatum nam, hic accusantium corporis corrupti in eveniet vitae officiis, voluptates recusandae autem!
+                    </div>
+                    <div class="card-footer">ICON ICON ICON</div>
+                </div>
+                <div class="card">
+                    <div class="card-header">Super Cool Project</div>
+                    <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dicta ab modi? Voluptatum nam, hic accusantium corporis corrupti in eveniet vitae officiis, voluptates recusandae autem!
+                    </div>
+                    <div class="card-footer">ICON ICON ICON</div>
+                </div>
+                <div class="card">
+                    <div class="card-header">Super Cool Project</div>
+                    <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dicta ab modi? Voluptatum nam, hic accusantium corporis corrupti in eveniet vitae officiis, voluptates recusandae autem!
+                    </div>
+                    <div class="card-footer">ICON ICON ICON</div>
+                </div>
+
             </div>
         </div>
         <div class="announcements-container">
