Add search icon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <div class="header-container">
         <div class="search-bar">
-            <span>Search</span>
+            <img class="icons" src="Icons/magnify.svg" alt="Search">
             <input type="search" id="search">
         </div>
         <div class="user-info">
