Add border radius

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <div class="announcements-container">
             <h3>Announcements</h3>
-            <div class="announcents-div">
+            <div class="announcements-div">
                 <div>
                     <h4>Announcement 1</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, eligendi voluptates praesentium consectetur architecto reiciendis impedit temporibus eos animi maxime!</p>
