Add font and style sidebar

--- a/index.html
+++ b/index.html
@@ -6,23 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo&family=Roboto:wght@100;500;700&family=Sono:wght@300&family=Urbanist:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="dashboard-container">
-        <div class="logo"><img class="logo-icon" src="Icons/abacus.svg" alt="Dashboard"> Dashboard</div>
+        <div class="logo"><img class="logo-icon" src="Icons/abacus.svg" alt="Dashboard"><span>Dashboard</span></div>
         <div class="navigation">
             <ul class="nav1">
-                <li><img class="icons" src="Icons/home-account.svg" alt="Home">Home</li>
-                <li><img class="icons" src="Icons/id-card.svg" alt="profile"> Profile</li>
-                <li><img class="icons" src="Icons/message-outline.svg" alt="Messages"> Messages</li>
-                <li><img class="icons" src="Icons/clock-time-nine-outline.svg" alt="History"> History</li>
-                <li><img class="icons" src="Icons/note-outline.svg" alt="Tasks"> Tasks</li>
-                <li><img class="icons" src="Icons/account-group-outline.svg" alt="Communities"> Communities</li>
+                <li><img class="icons" src="Icons/home-account.svg" alt="Home"><span>Home</span></li>
+                <li><img class="icons" src="Icons/id-card.svg" alt="profile"> <span>Profile</span></li>
+                <li><img class="icons" src="Icons/message-outline.svg" alt="Messages"> <span>Messages</span></li>
+                <li><img class="icons" src="Icons/clock-time-nine-outline.svg" alt="History"> <span>History</span></li>
+                <li><img class="icons" src="Icons/note-outline.svg" alt="Tasks"> <span>Tasks</span></li>
+                <li><img class="icons" src="Icons/account-group-outline.svg" alt="Communities"> <span>Communities</span></li>
             </ul> 
             <ul class="nav2">
-                <li><img class="icons" src="Icons/cog-outline.svg" alt="Settings"> Settings</li>
-                <li><img class="icons" src="Icons/help-box.svg" alt="Support"> Support</li>
-                <li><img class="icons" src="Icons/shield-check-outline.svg" alt="Privacy"> Privacy</li>
+                <li><img class="icons" src="Icons/cog-outline.svg" alt="Settings"> <span>Settings</span></li>
+                <li><img class="icons" src="Icons/help-box.svg" alt="Support"> <span>Support</span></li>
+                <li><img class="icons" src="Icons/shield-check-outline.svg" alt="Privacy"> <span>Privacy</span></li>
             </ul>
         </div>
     </nav>
