Complete main-content styling

--- a/index.html
+++ b/index.html
@@ -55,8 +55,20 @@
     </div>
     <div class="main-content-container">
         <div class="projects-container">
-            <h3>Your Projects</h3>
+            <h3 id="your-projects">Your Projects</h3>
             <div class="cards-container">
+                <div class="card">
+                    <h3 class="card-header">Super Cool Project</h3>
+                    <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dicta ab modi? Voluptatum nam, hic accusantium corporis corrupti in eveniet vitae officiis, voluptates recusandae autem!
+                    </div>
+                    <div class="card-footer"><img class="icons" src="Icons/star-plus-outline.svg" alt="Favourite"><img class="icons" src="Icons/eye-plus-outline.svg" alt="Watch"><img class="icons" src="Icons/source-fork.svg" alt="Fork"></div>
+                </div>
+                <div class="card">
+                    <h3 class="card-header">Super Cool Project</h3>
+                    <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dicta ab modi? Voluptatum nam, hic accusantium corporis corrupti in eveniet vitae officiis, voluptates recusandae autem!
+                    </div>
+                    <div class="card-footer"><img class="icons" src="Icons/star-plus-outline.svg" alt="Favourite"><img class="icons" src="Icons/eye-plus-outline.svg" alt="Watch"><img class="icons" src="Icons/source-fork.svg" alt="Fork"></div>
+                </div>
                 <div class="card">
                     <h3 class="card-header">Super Cool Project</h3>
                     <div class="card-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus dicta ab modi? Voluptatum nam, hic accusantium corporis corrupti in eveniet vitae officiis, voluptates recusandae autem!
@@ -99,6 +111,11 @@
                 <hr>
                 <div>
                     <h4>Announcement 3</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat voluptatibus recusandae at explicabo veniam ad commodi voluptate, necessitatibus asperiores neque!</p>
+                </div>
+                <hr>
+                <div>
+                    <h4>Announcement 4</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat voluptatibus recusandae at explicabo veniam ad commodi voluptate, necessitatibus asperiores neque!</p>
                 </div>
             </div>
