Complete header + project

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
     <div class="header-container">
         <div class="search-bar">
-            <img class="icons" src="Icons/magnify.svg" alt="Search">
+            <img id="search-icon" class="icons" src="Icons/magnify.svg" alt="Search">
             <input type="search" id="search">
         </div>
         <div class="user-info">
@@ -39,7 +39,7 @@
             <div class="circle-small dinosaur">
                 <img src="./Icons/icons8-kawaii-dinosaur-96.png" alt="Kawaii-dinosaur">
             </div>
-            <span id="username">Kurt Russell</span>
+            <h3 id="username">Kurt Russell</h3>
         </div>
         <div class="user-hello">
             <div class="circle dinosaur">
@@ -126,25 +126,25 @@
                 <div class="trending-div">
                     <div class="circle aquarium"><img src="/Icons/icons8-aquarium-96.png" alt="Aquarium"></div>
                     <div class="user">
-                        <span>@username</span><br><span>World Peace Builder</span>
+                        <span><b>@username</b></span><br><span>World Peace Builder</span>
                     </div>
                 </div>
                 <div class="trending-div">
                     <div class="circle bear"><img src="/Icons/icons8-bear-96.png" alt="Bear"></div>
                     <div class="user">
-                        <span>@username</span><br><span>World Peace Builder</span>
+                        <span><b>@username</b></span><br><span>World Peace Builder</span>
                     </div>
                 </div>
                 <div class="trending-div">
                     <div class="circle bee"><img src="/Icons/icons8-bee-top-view-96.png" alt="bee"></div>
                     <div class="user">
-                        <span>@username</span><br><span>World Peace Builder</span>
+                        <span><b>@username</b></span><br><span>World Peace Builder</span>
                     </div>
                 </div>
                 <div class="trending-div">
                     <div class="circle shiba"><img src="Icons/icons8-shiba-inu-96.png" alt="Shiba"></div>
                     <div class="user">
-                        <span>@username</span><br><span>World Peace Builder</span>
+                        <span><b>@username</b></span><br><span>World Peace Builder</span>
                     </div>
                 </div>
             </div>
